[ACPI] add SMP suport to processor driver (Venkatesh Pallipadi) http://bugzilla.kernel.org/show_bug.cgi?id=2615